--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "anchor-pki": "^0.3.2",
     "axios": "^1.6.2",
     "bcryptjs": "^3.0.2",
+    "ioredis": "^5.8.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
     "next": "^14.2.4",
